tests/ui/macros/metavar-expressions/concat-usage-errors.stderr
error: `concat` must have at least two elements
  --> $DIR/concat-usage-errors.rs:7:11
   |
LL |         ${concat()}
   |           ^^^^^^

error: `concat` must have at least two elements
  --> $DIR/concat-usage-errors.rs:10:11
   |
LL |         ${concat(aaaa)}
   |           ^^^^^^

error: `concat` must have at least two elements
  --> $DIR/concat-usage-errors.rs:13:11
   |
LL |         ${concat(aaaa,)}
   |           ^^^^^^

error: expected comma
  --> $DIR/concat-usage-errors.rs:18:10
   |
LL |         ${concat(aaaa aaaa)}
   |          ^^^^^^^^^^^^^^^^^^^

error: `concat` must have at least two elements
  --> $DIR/concat-usage-errors.rs:21:11
   |
LL |         ${concat($ex)}
   |           ^^^^^^

error: expected comma
  --> $DIR/concat-usage-errors.rs:27:10
   |
LL |         ${concat($ex, aaaa 123)}
   |          ^^^^^^^^^^^^^^^^^^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:56:22
   |
LL |         let ${concat("\u{00BD}", $ident)}: () = ();
   |                      ^^^^^^^^^^
   |
   = note: this literal produced an invalid identifier
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:56:15
   |
LL |         let ${concat("\u{00BD}", $ident)}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:76:30
   |
LL |         let ${concat($ident, "\u{00BD}")}: () = ();
   |                              ^^^^^^^^^^
   |
   = note: this literal produced an invalid identifier
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:76:15
   |
LL |         let ${concat($ident, "\u{00BD}")}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:91:26
   |
LL |         let ${concat(_a, 1.5)}: () = ();
   |                          ^^^
   |
   = note: float literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:91:15
   |
LL |         let ${concat(_a, 1.5)}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:94:26
   |
LL |         let ${concat(_a, c"hi")}: () = ();
   |                          ^^^^^
   |
   = note: C string literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:94:15
   |
LL |         let ${concat(_a, c"hi")}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:96:26
   |
LL |         let ${concat(_a, b"hi")}: () = ();
   |                          ^^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:96:15
   |
LL |         let ${concat(_a, b"hi")}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:98:26
   |
LL |         let ${concat(_a, b'b')}: () = ();
   |                          ^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:98:15
   |
LL |         let ${concat(_a, b'b')}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:100:26
   |
LL |         let ${concat(_a, b'b')}: () = ();
   |                          ^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:100:15
   |
LL |         let ${concat(_a, b'b')}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:103:30
   |
LL |         let ${concat($ident, 1.5)}: () = ();
   |                              ^^^
   |
   = note: float literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:103:15
   |
LL |         let ${concat($ident, 1.5)}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:105:30
   |
LL |         let ${concat($ident, c"hi")}: () = ();
   |                              ^^^^^
   |
   = note: C string literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:105:15
   |
LL |         let ${concat($ident, c"hi")}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:107:30
   |
LL |         let ${concat($ident, b"hi")}: () = ();
   |                              ^^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:107:15
   |
LL |         let ${concat($ident, b"hi")}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:109:30
   |
LL |         let ${concat($ident, b'b')}: () = ();
   |                              ^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:109:15
   |
LL |         let ${concat($ident, b'b')}: () = ();
   |               ^^^^^^

error: invalid item within a `${concat(...)}` expression
  --> $DIR/concat-usage-errors.rs:111:30
   |
LL |         let ${concat($ident, b'b')}: () = ();
   |                              ^^^^
   |
   = note: byte literals cannot be concatenated
   = help: `concat` can join metavariables, identifiers, string literals, and integer literals
help: expanding this `concat(...)` expression
  --> $DIR/concat-usage-errors.rs:111:15
   |
LL |         let ${concat($ident, b'b')}: () = ();
   |               ^^^^^^

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:24:19
   |
LL |         ${concat($ex, aaaa)}
   |                   ^^
   |
   = note: currently only string literals are supported

error: variable `foo` is not recognized in meta-variable expression
  --> $DIR/concat-usage-errors.rs:36:30
   |
LL |         const ${concat(FOO, $foo)}: i32 = 2;
   |                              ^^^

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-usage-errors.rs:43:14
   |
LL |         let ${concat("1", $ident)}: () = ();
   |              ^^^^^^^^^^^^^^^^^^^^^
...
LL |     starting_number!(_abc);
   |     ---------------------- in this macro invocation
   |
   = note: this error originates in the macro `starting_number` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `$`
  --> $DIR/concat-usage-errors.rs:56:13
   |
LL |         let ${concat("\u{00BD}", $ident)}: () = ();
   |             ^ expected pattern
...
LL |     starting_invalid_unicode!(_abc);
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `starting_invalid_unicode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `$`
  --> $DIR/concat-usage-errors.rs:76:13
   |
LL |         let ${concat($ident, "\u{00BD}")}: () = ();
   |             ^ expected pattern
...
LL |     ending_invalid_unicode!(_abc);
   |     ----------------------------- in this macro invocation
   |
   = note: this error originates in the macro `ending_invalid_unicode` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found `$`
  --> $DIR/concat-usage-errors.rs:91:13
   |
LL |         let ${concat(_a, 1.5)}: () = ();
   |             ^ expected pattern
...
LL |     unsupported_literals!(_abc);
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in the macro `unsupported_literals` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-usage-errors.rs:84:14
   |
LL |         let ${concat("", "")}: () = ();
   |              ^^^^^^^^^^^^^^^^
...
LL |     empty!();
   |     -------- in this macro invocation
   |
   = note: this error originates in the macro `empty` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-usage-errors.rs:118:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("\u{00BD}");
   |     ------------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-usage-errors.rs:118:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("\x41");
   |     --------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-usage-errors.rs:118:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("🤷");
   |     ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-usage-errors.rs:118:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("d[-_-]b");
   |     ------------------------------ in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-usage-errors.rs:118:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("-1");
   |     ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-usage-errors.rs:118:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("1.0");
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `${concat(..)}` is not generating a valid identifier
  --> $DIR/concat-usage-errors.rs:118:16
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     bad_literal_string!("'1'");
   |     -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `bad_literal_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:131:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:131:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:131:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:131:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:131:31
   |
LL |         const ${concat(_foo, $literal)}: () = ();
   |                               ^^^^^^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:142:31
   |
LL |         const ${concat(_foo, $tt)}: () = ();
   |                               ^^
   |
   = note: currently only string literals are supported

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:142:31
   |
LL |         const ${concat(_foo, $tt)}: () = ();
   |                               ^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: metavariables of `${concat(..)}` must be of type `ident`, `literal` or `tt`
  --> $DIR/concat-usage-errors.rs:142:31
   |
LL |         const ${concat(_foo, $tt)}: () = ();
   |                               ^^
   |
   = note: currently only string literals are supported
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 40 previous errors

